# routers/index.js
@@ -4,9 +4,13 @@ const degreeRouter = require("./degree");
 const swagger = require("./swagger");
 const errorHandler = require("../middleware/errorHandler");
 const AppErrorClass = require("../utils/appErrorClass");
+const oauth = require("./oauth.js");
+const login = require("./login.js");
+const logout = require("./logout.js");
+const passport = require("passport");
 
 // Mounting swagger routes under /api-docs endpoint
-router.use("/", swagger);
+router.use("/", swagger, oauth);
 
 // Mounting degree routes under /degree endpoint
 router.use("/degrees", degreeRouter);
@@ -14,10 +18,15 @@ router.use("/degrees", degreeRouter);
 // Mounting institution routes under /institution endpoint
 router.use("/institutions", institutionRouter);
 
+router.get("/login", passport.authenticate("github"), login);
+router.get("/logout", logout);
 // Default route handler for the root endpoint
-router.get("/", (req, res) => {
-  res.send("So far so good");
-});
+router.get("/", (req, res) =>{
+    res.send(
+        req.session.user !== undefined ? `Logged in as ${req.session.user.displayName} <br><a href='/logout'>Log out</a><br><a href='/api-docs'>API Docs</a>` : "<a href='/login'>Login</a>"
+    )
+  }
+)
 
 /**
  * * This route catches all undefined routes and forwards an error to the error handling middleware.
