# routers/institution.js
@@ -1,6 +1,6 @@
 const router = require("express").Router();
 const institutionController = require("../controllers/institutions");
-
+const { isAuthenticated } = require("../middleware/authenticate");
 /**
  * Route to get all institutions.
  * GET /
@@ -22,7 +22,7 @@ router.get("/:id", institutionController.getSingle);
  * Calls institutionController.createInstitution function.
  * Expects JSON body with institution details.
  */
-router.post("/create", institutionController.createInstitution);
+router.post("/create", isAuthenticated, institutionController.createInstitution);
 
 /**
  * Route to update an institution by ID.
@@ -31,7 +31,7 @@ router.post("/create", institutionController.createInstitution);
  * @param {string} id - The ID of the institution to update.
  * Expects JSON body with updated institution details.
  */
-router.put("/update/:id", institutionController.updateInstitution);
+router.put("/update/:id", isAuthenticated, institutionController.updateInstitution);
 
 /**
  * Route to delete an institution by ID.
@@ -39,6 +39,6 @@ router.put("/update/:id", institutionController.updateInstitution);
  * Calls institutionController.deleteInstitution function.
  * @param {string} id - The ID of the institution to delete.
  */
-router.delete("/delete/:id", institutionController.deleteInstitution);
+router.delete("/delete/:id", isAuthenticated, institutionController.deleteInstitution);
 
 module.exports = router;
